[gd_scene load_steps=28 format=3 uid="uid://hiqksjccygnv"]

[ext_resource type="Script" path="res://scripts/Enemy_Bot.gd" id="1_2rm6a"]
[ext_resource type="PackedScene" uid="uid://ojiiwcj8jct6" path="res://tscn/animation_component.tscn" id="2_1y5gj"]
[ext_resource type="Texture2D" uid="uid://bu73a65p2wlus" path="res://assets/visual/enemy/Bot Wheel/move with FX.png" id="2_h5n5w"]
[ext_resource type="Texture2D" uid="uid://dtrkwabr43yrd" path="res://assets/visual/enemy/Bot Wheel/death.png" id="2_m185e"]
[ext_resource type="Texture2D" uid="uid://b8l16jdpwvt8x" path="res://assets/visual/enemy/Bot Wheel/damaged.png" id="3_cfo15"]
[ext_resource type="PackedScene" uid="uid://oiicbhvi6ce0" path="res://tscn/health_component.tscn" id="5_eelgr"]
[ext_resource type="PackedScene" uid="uid://22q253ptx5of" path="res://tscn/hitbox_component.tscn" id="6_58ok3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5egun"]
size = Vector2(16, 22)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y1e3f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f8lhv"]
atlas = ExtResource("2_m185e")
region = Rect2(0, 0, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3feu"]
atlas = ExtResource("2_m185e")
region = Rect2(0, 26, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w436"]
atlas = ExtResource("2_m185e")
region = Rect2(0, 52, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_4knkb"]
atlas = ExtResource("2_m185e")
region = Rect2(0, 78, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntnji"]
atlas = ExtResource("2_m185e")
region = Rect2(0, 104, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_tugyc"]
atlas = ExtResource("2_m185e")
region = Rect2(0, 130, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvr34"]
atlas = ExtResource("3_cfo15")
region = Rect2(0, 0, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpxwj"]
atlas = ExtResource("3_cfo15")
region = Rect2(0, 26, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghnqi"]
atlas = ExtResource("2_h5n5w")
region = Rect2(0, 0, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2vmt"]
atlas = ExtResource("2_h5n5w")
region = Rect2(0, 26, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b1oa"]
atlas = ExtResource("2_h5n5w")
region = Rect2(0, 52, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sp6m"]
atlas = ExtResource("2_h5n5w")
region = Rect2(0, 78, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_livjd"]
atlas = ExtResource("2_h5n5w")
region = Rect2(0, 104, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rd27"]
atlas = ExtResource("2_h5n5w")
region = Rect2(0, 130, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ge06"]
atlas = ExtResource("2_h5n5w")
region = Rect2(0, 156, 59, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_eufm7"]
atlas = ExtResource("2_h5n5w")
region = Rect2(0, 182, 59, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_iftlu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8lhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3feu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w436")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4knkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntnji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tugyc")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvr34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpxwj")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghnqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2vmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b1oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sp6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_livjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rd27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ge06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eufm7")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqjj4"]
size = Vector2(30, 22)

[node name="Enemy_Bot" type="CharacterBody2D" node_paths=PackedStringArray("hitbox_component")]
visibility_layer = 8
z_index = 2
position = Vector2(7, 0)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_2rm6a")
hitbox_component = NodePath("HitboxComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 0)
shape = SubResource("RectangleShape2D_5egun")

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_1y5gj")]
health_component = NodePath("../HealthComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimationComponent"]
material = SubResource("CanvasItemMaterial_y1e3f")
position = Vector2(-7, 0)
sprite_frames = SubResource("SpriteFrames_iftlu")
animation = &"Run"
autoplay = "Run"
frame_progress = 0.436132

[node name="HealthComponent" parent="." node_paths=PackedStringArray("animation_component", "hitbox_component", "parent") instance=ExtResource("5_eelgr")]
animation_component = NodePath("../AnimationComponent")
hitbox_component = NodePath("../HitboxComponent")
parent = NodePath("..")
MAX_HEALTH = 10.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "parent") instance=ExtResource("6_58ok3")]
health_component = NodePath("../HealthComponent")
parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-7, 0)
shape = SubResource("RectangleShape2D_xqjj4")

[node name="Off Screen Timer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 48.17

[node name="Timer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.1
autostart = true

[node name="boss_sfx_Timer" type="Timer" parent="."]

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="Off Screen Timer" to="." method="_on_off_screen_timer_timeout"]
[connection signal="timeout" from="NavigationAgent2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="boss_sfx_Timer" to="." method="_on_boss_sfx_timer_timeout"]
